--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"typescript": "^5.0.0",
 		"unplugin-icons": "^22.1.0",
 		"vite": "^6.2.6",
-		"vite-plugin-devtools-json": "^0.2.0"
+		"vite-plugin-devtools-json": "^0.2.0",
+		"vite-plugin-pwa": "^1.0.0"
 	}
 }
